# chitr

./: .gitignore  CMakeLists.txt  Readme.md
assets/: MainIcon.icns
include/chitr/: CTime.h  ChitrLogger.h  MainFrame.h  Resource.h  RootFrame.h
include/component/: RoundedText.h
include/media/: ImageContext.h  ImagePanel.h  MediaContext.h  MediaPanel.h  VideoContext.h  VideoPanel.h
src/: MainFrame.cpp  Resource.cpp  RootFrame.cpp  main.cpp
src/component/: RoundedText.cpp
src/media/: ImageContext.cpp  ImagePanel.cpp  MediaPanel.cpp  VideoContext.cpp  VideoPanel.cpp
src/utils/: CFile.cpp  CTime.cpp  ChitrLogger.cpp  Resource.cpp
